<resources>
    <string name="app_name">CanyonGG</string>
    <string name="hint_main_intro">자신의 소환사를 등록해보세요.\n나의 전적을 바로 볼 수 있습니다.</string>
    <string name="main_btn_text">등록하기</string>
    <string name="bookmark_label">즐겨찾기에 등록된 소환사</string>
    <string name="book_mark_label_content">아직 즐겨찾기에 등록된 소환사가 없습니다.\n 소환사를 검색 후 즐겨찾기에 등록 해주세요.</string>
    <string name="book_mark_tab_btn_text">검색하기</string>
    <string name="book_mark_champ_label">즐겨찾기에 등록된 챔피언</string>
    <string name="book_mark_champ_content">아직 즐겨찾기에 등록된 챔피언이 없습니다.\n 챔피언을 즐겨찾기에 등록해주세요.</string>
    <string name="champ_btn_name">챔피언 보기</string>
    <string name="rotation_champ_text">이번주 로테이션 챔피언</string>
    <string name="bot_nav_home">홈</string>
    <string name="bot_nav_search">소환사 검색</string>
    <string name="bot_nav_setting">설정</string>
    <string name="main_my_history_label">나의 전적</string>
    <string name="search_screen_title">내 소환사를 검색해 주세요.</string>
    <string name="search_sub_title">소환사를 등록하면 전적을 바로 볼 수 있습니다.</string>
    <string name="search_edit_hint">소환사 이름</string>
    <string name="round_kda">%.2f</string>
    <string name="search_summoner_hint">소환사 이름을 입력해주세요</string>
    <string name="search_latest_summoner">최근 검색한 소환사</string>
    <string name="summary_game_label">최근 20게임 요약</string>
    <string name="win_rate_text">승률</string>
    <string name="highest_kill_text">최다킬</string>
    <string name="kda_text">KDA</string>
    <string name="dialog_title">일치하는 이름의 소환사가 없습니다</string>
    <string name="dialog_message">소환사 이름을 다시 확인해주세요.</string>
    <string name="dialog_positive">확인</string>
    <string name="match_summary">종합</string>
    <string name="team_analysis">팀 분석</string>
    <string name="my_rank">순위</string>
    <string name="empty_view_kda">%.2f : 1</string>
    <string name="empty_view_win_rate">%d%%</string>
    <string name="user_view_whole_match">%d전</string>
    <string name="user_view_win_count">" %d승"</string>
    <string name="user_view_lose_count">" %d패"</string>
    <string name="user_view_win_rate">" 승률 %d%%"</string>
    <string name="user_view_kda">" KDA %.2f : 1"</string>
    <string name="rank_view_ranking">"%s위"</string>
    <string name="rank_view_value">"%s "</string>
    <string name="rank_max_value">"/ %s"</string>
    <string name="delete_history">전체 삭제</string>
    <string name="summoner_kill">"%d /"</string>
    <string name="summoner_death">" %d "</string>
    <string name="summoner_assist">"/ %d"</string>
    <string name="summoner_kda">"%.2f : 1"</string>
    <string name="summoner_kill_cs">"CS : %d"</string>
    <string name="detail_my_info_label">자세히 보기</string>
    <string name="add_bookmark_message">즐겨찾기에 등록 되었습니다!</string>
    <string name="delete_bookmark_message">즐겨찾기에 해제 되었습니다!</string>
    <string name="victory_team_label">승리팀</string>
    <string name="lose_team_label">패배팀</string>
    <string name="rank_user_name_title">"%s 님의 지표별 순위 입니다."</string>
    <string name="rank_dealt">"챔피언에게 가한 피해량"</string>
    <string name="rank_damaged">"챔피언에게 받은 피해량"</string>
    <string name="rank_kill">"챔피언 처치"</string>
    <string name="rank_death">"데스"</string>
    <string name="rank_assist">"챔피언 처치 도움"</string>
    <string name="rank_minions">"CS"</string>
    <string name="rank_spent_gold">"소비한 골드"</string>
    <string name="rank_vision_score">"시야 점수"</string>
    <string name="info_delete_toast">삭제되었습니다.</string>
    <string name="infro_refresh_toast">새로고침 되었습니다.</string>
    <string name="sub_pager_kill">챔피언 킬</string>
    <string name="sub_pager_dealt">가한 피해량</string>
    <string name="sub_pager_damaged">받은 피해량</string>
    <string name="sub_pager_spent_gold">사용한 골드</string>
    <string name="sub_pager_minions">미니언</string>
    <string name="sub_pager_vision_score">시야 점수</string>
    <string name="setting_cache_key">cache_delete</string>
    <string name="setting_theme_list_key">theme_list</string>
    <string name="setting_light_theme_value">light_theme</string>
    <string name="setting_dark_theme_value">dark_theme</string>
    <string name="victory_label">승리</string>
    <string name="lose_label">패배</string>
    <string name="zero_kill">0 킬</string>
    <string name="sole_kill">단일 킬</string>
    <string name="double_kill">더블 킬</string>
    <string name="triple_kill">트리플 킬</string>
    <string name="quadra_kill">쿼드라 킬</string>
    <string name="penta_kill">펜타 킬</string>
    <string name="classic_mode_label">CLASSIC</string>
    <string name="aram_mode_label">ARAM</string>
    <string name="tutorial_mode_label">TUTORIAL</string>
    <string name="urf_mode_label">URF</string>
    <string name="ultimate_mode_label">ULTBOOK</string>
    <string name="classic_mode">소환사 협곡</string>
    <string name="aram_mode">칼바람 나락</string>
    <string name="tutorial_mode">튜토리얼</string>
    <string name="urf_mode">우르프</string>
    <string name="ultimate_mode">궁극기 주문서</string>
    <string name="login_label">로그인</string>
    <string name="register_label">회원가입</string>
    <string name="email_label">이메일</string>
    <string name="password_label">비밀번호</string>
    <string name="password_chk_label">비밀번호 확인</string>
    <string name="error_email">이메일을 입력해주세요</string>
    <string name="error_email_type">이메일 형식으로 입력해주세요</string>
    <string name="error_password">비밀번호가 6글자 이상 이어야 합니다</string>
    <string name="success_register">회원가입에 성공하셨습니다.</string>
    <string name="fail_register">회원가입에 실패했습니다. 다시 시도해주세요.</string>
    <string name="error_chk_password">비밀번호가 일치 하지 않습니다.</string>
    <string name="success_login">로그인에 성공했습니다</string>
    <string name="fail_login">이메일 또는 비밀번호를 다시 확인해 주세요</string>
    <string name="login_password_message">비밀번호를 입력해주세요</string>
    <string name="change_theme_label">테마 변경</string>
    <string name="logout_label">로그아웃</string>
    <string name="dark_theme_label">다크 테마</string>
    <string name="light_theme_label">라이트 테마</string>
    <string name="change_theme_title">테마 변경</string>
    <string name="system_theme">시스템 설정 테마</string>
    <string name="toolbar_detail_label">상세 전적</string>
    <string name="toolbar_search_result_label">전적</string>
    <string name="toolbar_search_label">검색</string>
    <string name="toolbar_setting_label">설정</string>
    <string name="toolbar_login_label">로그인</string>
    <string name="toolbar_register_label">회원가입</string>
    <string name="toolbar_home_label">홈</string>
    <string name="toolbar_home_representative_label">소환사 등록</string>
    <string name="champion_title">챔피언</string>
    <string name="bot_champion_label">챔피언</string>
    <string name="champ_story_label">스토리</string>
    <string name="champ_stat_label">스탯</string>
    <string name="champ_detail_title">챔피언 정보</string>
    <string name="champ_hp">기본 체력</string>
    <string name="champ_hp_per_level">성장 체력</string>
    <string name="champ_attack">기본 공격력</string>
    <string name="champ_attack_per_level">성장 공격력</string>
    <string name="champ_armor">기본 방어력</string>
    <string name="champ_armor_per_level">성장 방어력</string>
    <string name="champ_spell_block">마법 저항력</string>
    <string name="champ_spell_block_per_level">성장 마법 저항력</string>
    <string name="champ_move_speed">이동 속도</string>
    <string name="bookmar_champion_label">즐겨찾기에 등록된 챔피언</string>
</resources>