<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_graph"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/bot_nav_home" />
    <item
        android:id="@+id/search_graph"
        android:enabled="true"
        android:icon="@drawable/magnifier"
        android:title="@string/bot_nav_search" />
    <item
        android:id="@+id/champion_graph"
        android:enabled="true"
        android:icon="@drawable/champion"
        android:title="@string/bot_champion_label" />
    <item
        android:id="@+id/settings_graph"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:title="@string/bot_nav_setting" />
</menu>