<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="io.github.seoj17.presentaion.ui.setting.SettingViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:showDividers="middle">

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bot_nav_setting"
            android:textColor="@color/general_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/login_label"
            android:visibility="@{vm.loginState ? View.GONE : View.VISIBLE}" />

        <TextView
            android:id="@+id/current_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@{vm.currentEmail}"
            android:visibility="@{vm.loginState ? View.VISIBLE : View.GONE}"
            tools:text="qw4643987@naver.com" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.userLogout()}"
            android:paddingVertical="10dp"
            android:text="@string/logout_label"
            android:visibility="@{vm.loginState ? View.VISIBLE : View.GONE}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/change_theme_title"
            android:textColor="@color/general_text_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/theme_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            bind:check="@{vm.themeSetting}">

            <RadioButton
                android:id="@+id/system_theme"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:buttonTint="@color/positive_click_color"
                android:text="@string/system_theme" />

            <RadioButton
                android:id="@+id/light_theme"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:buttonTint="@color/positive_click_color"
                android:text="@string/light_theme_label" />

            <RadioButton
                android:id="@+id/dark_theme"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:buttonTint="@color/positive_click_color"
                android:text="@string/dark_theme_label" />
        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>