<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_graph"
    app:startDestination="@id/setting">
    <argument
        android:name="showBottomNavView"
        android:defaultValue="true" />

    <fragment
        android:id="@+id/setting"
        android:name="io.github.seoj17.presentaion.ui.setting.SettingFragment"
        android:label="@string/toolbar_setting_label">
        <action
            android:id="@+id/action_setting_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="io.github.seoj17.presentaion.ui.login.LoginFragment"
        android:label="@string/toolbar_login_label">
        <action
            android:id="@+id/action_loginFragment_to_registerUserFragment"
            app:destination="@id/registerUserFragment" />
        <action
            android:id="@+id/action_loginFragment_to_setting"
            app:destination="@id/setting"
            app:popUpTo="@id/setting"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerUserFragment"
        android:name="io.github.seoj17.presentaion.ui.register.RegisterUserFragment"
        android:label="@string/toolbar_register_label">
        <action
            android:id="@+id/action_registerUserFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>