<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="io.github.seoj17.presentaion.ui.representative.RepresentativeSummonerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/app_bar_back"
            app:navigationIconTint="@color/toolbar_navigation" />

        <ImageView
            android:id="@+id/search_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/canyon_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/search_screen_title"
            android:textColor="@color/general_text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/search_logo"
            app:layout_constraintTop_toBottomOf="@id/search_logo" />

        <TextView
            android:id="@+id/search_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/search_sub_title"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/search_title"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/summoner_name"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/search_edit_hint"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:text="@={vm.summonerName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_sub_title" />

        <Button
            android:id="@+id/summoner_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:onClick="@{() -> vm.searchSummoner()}"
            android:text="@string/book_mark_tab_btn_text"
            app:layout_constraintEnd_toEndOf="@id/summoner_name"
            app:layout_constraintStart_toStartOf="@id/summoner_name"
            app:layout_constraintTop_toBottomOf="@id/summoner_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>