<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="io.github.seoj17.presentaion.ui.register.RegisterUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/app_bar_back"
            app:navigationIconTint="@color/toolbar_navigation" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/email_label"
                bind:errorText="@{@string/error_email_type}"
                bind:valid="@{vm.emailValid}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:passwordToggleEnabled="true"
                bind:errorText="@{@string/error_password}"
                bind:valid="@{vm.passwordValid}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:text="@={vm.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_chk_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_chk_label"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:passwordToggleEnabled="true"
                bind:errorText="@{@string/error_chk_password}"
                bind:valid="@{vm.passwordChkValid}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_chk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:text="@={vm.passwordChk}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="@{vm.validLoginInfo}"
                android:onClick="@{() -> vm.registerSubmit()}"
                android:padding="5dp"
                android:text="@string/dialog_positive" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>