<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_graph"
    app:startDestination="@id/home">

    <include app:graph="@navigation/search_graph" />
    <include app:graph="@navigation/champion_graph" />
    <include app:graph="@navigation/search_result_graph" />

    <fragment
        android:id="@+id/home"
        android:name="io.github.seoj17.presentaion.ui.home.HomeFragment"
        android:label="@string/toolbar_home_label">
        <action
            android:id="@+id/action_home_to_registerSummoner"
            app:destination="@id/representativeSummoner" />
        <argument
            android:name="summonerName"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_home_to_search_graph"
            app:destination="@id/search_graph"
            app:popUpTo="@id/home"
            app:popUpToSaveState="true"
            app:restoreState="true">
            <argument
                android:name="summonerName"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />

            <argument
                android:name="summonerPuuid"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
        </action>
        <action
            android:id="@+id/action_home_to_champion_graph"
            app:destination="@id/champion_graph"
            app:popUpTo="@id/home"
            app:popUpToSaveState="true"
            app:restoreState="true" />
        <action
            android:id="@+id/action_home_to_search_result_graph"
            app:destination="@id/search_result_graph">
            <argument
                android:name="summonerName"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />

            <argument
                android:name="summonerPuuid"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
        </action>
        <action
            android:id="@+id/action_home_to_champion_detail"
            app:destination="@id/champion_detail">
            <argument
                android:name="champ_key"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/representativeSummoner"
        android:name="io.github.seoj17.presentaion.ui.representative.RepresentativeSummonerFragment"
        android:label="@string/toolbar_home_representative_label">
        <action
            android:id="@+id/action_registerSummoner_to_home"
            app:destination="@id/home"
            app:popUpTo="@id/home"
            app:popUpToInclusive="true">
            <argument
                android:name="summonerName"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/champion_detail"
        android:name="io.github.seoj17.presentaion.ui.champion.detail.ChampionDetailFragment"
        android:label="@string/champ_detail_title">
        <argument
            android:name="champ_key"
            app:argType="integer" />

        <argument
            android:name="showBottomNavView"
            android:defaultValue="false" />
    </fragment>
</navigation>